<resources>
    <string name="app_name">WaveMining Chatbot Demo</string>
    <string-array name="age">
        <item>17-</item>
        <item>18–39</item>
        <item>40–64</item>
        <item>65+</item>
    </string-array>
    <string name="select_category">Select message type</string>
    <string name="network_error">No network. Please try again later!</string>
    <string name="my_profile">Settings</string>
    <string name="send">Send</string>
    <string name="settings_gender">MY GENDER</string>
    <string name="settings_age">MY AGE</string>
    <string name="settings_language">MY LANGUAGE</string>
    <string name="settings_notifications">MY NOTIFICATIONS</string>
    <string name="processing_image">Processing image</string>
    <string name="processing_image_error">Error processing image</string>
    <string name="daily_suggestion">Daily suggestions</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="language">
        <item>@string/english_language</item>
        <item>@string/french_language</item>
        <item>@string/spanish_language</item>
    </string-array>
    <string-array name="language_plus">
        <item>@string/english_language</item>
        <item>@string/french_language</item>
        <item>@string/spanish_language</item>
        <item>@string/japanese_language</item>
        <item>@string/chinese_language</item>
    </string-array>
    <string-array name="languages_start_screen">
        <item>English</item>
        <item>Français</item>
        <item>Español</item>
    </string-array>
    <string name="english_language">English</string>
    <string name="french_language">Francais</string>
    <string name="spanish_language">Espanol</string>
    <string name="japanese_language">Japanese</string>
    <string name="chinese_language">Chinese</string>
    <string-array name="notifications_frequency">
        <item>One message idea per day</item>
        <item>One every 2 days</item>
        <item>One per week</item>
    </string-array>
    <string-array name="relationship_statuses">
        <item>I live on my own</item>
        <item>I live with someone</item>
    </string-array>
    <string-array name="mbti_groups">
        <item>ABCD</item>
        <item>\????</item>
        <item>ISTJ</item>
        <item>ISTP</item>
        <item>ESTP</item>
        <item>ESTJ</item>
        <item>ISFJ</item>
        <item>ISFP</item>
        <item>ESFP</item>
        <item>ESFJ</item>
        <item>INFJ</item>
        <item>INFP</item>
        <item>ENFP</item>
        <item>ENFJ</item>
        <item>INTJ</item>
        <item>INTP</item>
        <item>ENTP</item>
        <item>ENTJ</item>
    </string-array>
    <string-array name="tutorial_titles">
        <item>@string/tutorial_match_message_with_photo</item>
        <item>@string/tutorial_send_as_love_postcard</item>
        <item>@string/tutorial_choose_favorite_type_of_messages</item>
    </string-array>
    <string-array name="share_gif_dialog_items">
        <item>@drawable/ic_share_messenger</item>
        <item>@drawable/ic_whatsapp</item>
        <item>@drawable/ic_share_viber</item>
        <item>@drawable/ic_share_instagram</item>
        <item>@drawable/ic_share_facebook</item>
        <item>@drawable/ic_share_twitter</item>
        <item>@drawable/ic_fab_postcard</item>
    </string-array>
    <string-array name="share_gif_dialog_text">
        <item>@string/share_dialog_messenger</item>
        <item>@string/share_dialog_whatsapp</item>
        <item>@string/share_dialog_viber</item>
        <item>@string/share_dialog_instagram</item>
        <item>@string/share_dialog_facebook</item>
        <item>@string/share_dialog_twitter</item>
        <item>@string/share_more</item>
    </string-array>
    <string-array name="share_custom_dialog_text">
        <item>@string/share_dialog_messenger</item>
        <item>@string/share_dialog_whatsapp</item>
        <item>@string/share_dialog_viber</item>
        <item>@string/share_dialog_instagram</item>
        <item>@string/share_dialog_facebook</item>
        <item>@string/share_dialog_twitter</item>
        <item>@string/share_dialog_as_postcard</item>
    </string-array>
    <string-array name="share_custom_dialog_items">
        <item>@drawable/ic_share_messenger</item>
        <item>@drawable/ic_whatsapp</item>
        <item>@drawable/ic_share_viber</item>
        <item>@drawable/ic_share_instagram</item>
        <item>@drawable/ic_share_facebook</item>
        <item>@drawable/ic_share_twitter</item>
        <item>@drawable/ic_fab_postcard</item>
    </string-array>
    <string-array name="share_votecard_items">
        <item>@drawable/ic_whatsapp</item>
        <item>@drawable/ic_share_twitter</item>
        <item>@drawable/ic_share_facebook</item>
    </string-array>
    <string-array name="share_votecard_text">
        <item>@string/share_dialog_whatsapp</item>
        <item>@string/share_dialog_twitter</item>
        <item>@string/share_dialog_facebook</item>
    </string-array>
    <string name="share_dialog_email">by email</string>
    <string name="share_dialog_text_message">by sms</string>
    <string name="share_dialog_messenger">with Messenger</string>
    <string name="share_dialog_twitter">with Twitter</string>
    <string name="share_dialog_facebook">on my Facebook wall</string>
    <string name="share_dialog_as_postcard">as an image with…</string>
    <string name="share_dialog_separate">as text + attachement with…</string>
    <string name="share_dialog_line">with Line</string>
    <string name="share_dialog_instagram">on Instagram</string>
    <string name="share_dialog_wechat">with WeChat</string>
    <string name="share_dialog_snapchat">with Snapchat</string>
    <string name="share_dialog_title">@string/send</string>
    <string name="make_me_slide">Please swipe me</string>
    <string name="send_without_text">Send photo on its own</string>
    <string name="choose_picture">Please choose a picture</string>
    <string name="gender_title">I\'m</string>
    <string name="gender_man">a man</string>
    <string name="gender_woman">a woman</string>
    <string name="share_to_facebook_wall">Post on Facebook</string>
    <string name="of">of</string>
    <string name="quiz_question">How would you like to be told \"%s\"</string>
    <string name="quiz_results">What others like receiving</string>
    <string name="continue_without_connection">Continue without connection</string>
    <string name="tutorial_match_message_with_photo">Photos and texts can be mixed and matched. Swipe photos and texts to the left.</string>
    <string name="tutorial_send_as_love_postcard">When a text and an image make a good combination, send it!</string>
    <string name="tutorial_choose_favorite_type_of_messages">Select a message category from the menu</string>
    <string name="text_edit_text">Edit text</string>
    <string name="text_recommend">See popular photos for this text</string>
    <string name="quiz">My style of messages</string>
    <string name="save_image_hint">The picture has been saved in the default download folder</string>
    <string name="already_has_image">You already has this image</string>
    <string name="back_exit_hint">Click BACK again to exit</string>
    <string name="recipients_settings_title">My usual recipients</string>
    <string name="recipients_chose_hint">You need to chose at least one active recipient</string>
    <string name="menu_choose_recipient">Select a recipient</string>
    <string name="ok">OK</string>
    <string name="recipients_saved">You choice of favourite recipients has been saved</string>
    <string name="close">Close</string>
    <string name="popular_images">Popular Images</string>
    <string name="choose_intention">Choose intention</string>
    <string name="click_to_add_text">or click on a text to add it</string>
    <string name="popular_texts_title">View popular texts to say...</string>
    <string name="popular_pictures_title">View popular pictures to say...</string>
    <string name="popular_texts_say">Select a message to say %s</string>
    <string name="popular_images_say">Popular images to say %s</string>
    <string name="popular_texts">Popular texts</string>
    <string name="invite_facebook">Invite friends</string>
    <string name="share_dialog_whatsapp">with WhatsApp</string>
    <string name="share_dialog_whatsapp_postcard">in postcard mode</string>
    <string name="quiz_hint">Touch a message if you want to send it</string>
    <string name="quiz_main_title">What you like receiving</string>
    <string name="settings_relationship">MY RELATIONSHIP STATUS</string>
    <string name="quiz_list_hint">Please tell us the type of messages you like receiving so we can make better suggestions!</string>
    <string name="no_data">No data. Try again later</string>
    <string name="no_popular_content">No popular image for this text. Click on the text to send it!</string>
    <string name="quiz_list_title">What you like receiving</string>
    <string name="click_to_open_menu">Click to open menu</string>
    <string name="share_dialog_skype">with Skype</string>
    <string name="share_dialog_viber">with Viber</string>
    <string name="help_us">Help/Donate</string>
    <string name="help_us_title">Please help</string>
    <string name="help_us_share">Share on Facebook</string>
    <string name="help_us_rating">Give us a cool rating on the store</string>
    <string name="help_us_try_other_apps">Try one of our other apps</string>
    <string name="share_dialog_print_and_send">print and send...</string>
    <string name="print_send_as_postcard">Send as paper postcard (2€)</string>
    <string name="print_send_as_postcard_with_flowers">Send with flowers (12€)</string>
    <string name="print_send_as_postcard_with_chocolate">Send with chocolates (9€)</string>
    <string name="print_on_shirt">Print on a T-Shirt (8€)</string>
    <string name="print_on_mug">Print on a mug (8€)</string>
    <string name="oops">Bonus features</string>
    <string name="not_implemented_message">Sorry, this option is not quite ready yet! We have unlocked (free) bonus features instead.</string>
    <string name="print_and_send">Print and send</string>
    <string name="touch_image_to_send">Touch an image to send it with the text</string>
    <string name="menu_choose_theme">Select an image theme</string>
    <string name="add_mbti">My MBTI type</string>
    <string name="mbti_group_question">Do you know your MBTI group ?</string>
    <string name="yes">Yes</string>
    <string name="mbti_no">No, let\'s look it up!</string>
    <string name="no">No</string>
    <string name="mbti_please_choose_group">Please choose your profile</string>
    <string name="mbti_google_message">You can find information about personality types by Googling \"MBTI test\" or \"Jung test\"</string>
    <string name="mbti_google_suggestions">Once you do the test online, you will then be able to choose one of those 16 groups. It will allow us to make great message suggestions!</string>
    <string name="search_now">Search Now</string>
    <string name="stickers_pals">Stickers Pals</string>
    <string name="please_login_facebook">Please login with Facebook to activate this feature</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="thank_you">Thank you</string>
    <string name="help_us_rating_question">How do you rate us?</string>
    <string name="play">Play</string>
    <string name="bubble_mode">Bubble</string>
    <string name="edit">Edit</string>
    <string name="translations">Auto translate</string>
    <string name="ideas">Ideas</string>
    <string name="pick_variation">Pick variation:</string>
    <string name="reset">Reset</string>
    <string name="bot_name">Botname</string>
    <string name="load">Load</string>
</resources>