<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_developer_info"
            style="@style/SlidingMenuOptionTextStyle"
            android:layout_gravity="left"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/tv_device_id"
            style="@style/SlidingMenuOptionTextStyle"
            android:layout_marginTop="5dp" />

        <TextView
            style="@style/SlidingMenuOptionTextStyle"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:text="@string/bot_name" />

        <EditText
            android:id="@+id/et_botname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/load" />

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/reset" />

        </LinearLayout>

        <TextView
            style="@style/SlidingMenuOptionTextStyle"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:text="@string/pick_variation" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_variation1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0-1" />

            <RadioButton
                android:id="@+id/rb_variation2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2-3" />

            <RadioButton
                android:id="@+id/rb_variation3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="4-5" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/ok" />

    </LinearLayout>

</layout>