<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.ghostwording.chatbot.textimagepreviews.TranslationActivity" />

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/translations"
            app:titleTextColor="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/tv_bubble"
                    style="@style/SlidingMenuOptionTextStyle"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/switch_bubble"
                    android:padding="0dp"
                    android:text="@string/bubble_mode"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_bubble"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/btn_play"
                    android:padding="8dp"
                    android:theme="@style/ToolbarSwitch" />

                <FrameLayout
                    android:id="@+id/btn_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:clickable="true"
                    android:foreground="?android:selectableItemBackground">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_messenger_bg"
                        android:orientation="horizontal"
                        android:padding="7dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_listen" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="5dp"
                            android:text="@string/play"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </LinearLayout>

                </FrameLayout>

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="scrollable" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <android.support.v4.view.ViewPager
                android:id="@+id/vp_items"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="@{viewModel.isDataLoading ? View.VISIBLE : View.GONE}" />
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/btn_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_text_edit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/edit"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/btn_send"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="0.9"
                android:background="@drawable/bg_main_button"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/iv_main_action"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_send" />

                    <TextView style="@style/ShareTextStyle" />
                </LinearLayout>

            </FrameLayout>

            <LinearLayout
                android:id="@+id/btn_image_recommendation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_recycle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/ideas"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</layout>